packages/typ/tests/fixtures/diagnostics/0740_fcm_hidden_value_to_int_consumer_08.ml.expected
File "0740_fcm_hidden_value_to_int_consumer_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0740_fcm_hidden_value_to_int_consumer_08 is not a valid module name.

File "0740_fcm_hidden_value_to_int_consumer_08.ml", line 10, characters 20-27:
10 |   consume_int_theta M.value
                         ^^^^^^^
Error: The value M.value has type M.t but an expression was expected of type
         int
